--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="case.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
+    <title>quality case</title>
     <meta name="description" content="case it website " />
 
-    <!-- TODO: Update og:title to match your application name -->
     <meta property="title" content="case" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
   </head>
 
   <body>
